--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
           <div class="swatch-container pt-7241c">
 
             <div class="front green copy">
+                <div class="hover-notification">Copy to Clipboard</div>
               <footer class="details">
                 <p>Talix Green
                   <span class="hex-code class="hex-code"">#64A70B</span>
@@ -36,6 +37,7 @@
           <div class="swatch-container pt-7241c">
 
             <div class="front grey">
+                <div class="hover-notification">Copy to Clipboard</div>
               <footer class="details">
                 <p>Talix Grey
                   <span class="hex-code">#54585A</span>
@@ -47,7 +49,8 @@
 
           <div class="swatch-container pt-7241c">
 
-            <div class="front white">            
+            <div class="front white">
+                <div class="hover-notification">Copy to Clipboard</div>
               <footer class="details">
                 <p>Talix White
                   <span class="hex-code">#FFF</span>
@@ -58,6 +61,7 @@
           <div class="swatch-container pt-7241c">
 
             <div class="front blue">
+              <div class="hover-notification">Copy to Clipboard</div>
               <footer class="details">
                 <p>Talix Blue
                   <span class="hex-code">#003D4C</span>
@@ -69,9 +73,10 @@
           <div class="swatch-container pt-7241c">
 
             <div class="front purple">
+              <div class="hover-notification">Copy to Clipboard</div>
               <footer class="details">
                 <p>Talix Purple
-                  <span class="hex-code">#5F259F</span>
+                  <span class="hex-code" id="copyBitch">#5F259F</span>
                 </p>
               </footer>
             </div>
@@ -83,7 +88,7 @@
 
       <!-- end color palette div -->
     </div>
-    <div class="row click-notification">Click color to copy to clipboard</div>
+    <div class="row click-notification"><u>Click</u> color to copy to clipboard</div>
 
   </div>
 
