i have no idea of 80 percent of  what Im doing

--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
           <div class="swatch-container pt-7241c">
 
             <div class="front green copy">
-                <div class="hover-notification">Copy to Clipboard</div>
+              <div class="button-wrap">
+
+                <button class="hover-notification greenBTN">Copy to Clipboard</button>
+              </div>
               <footer class="details">
                 <p>Talix Green
                   <span class="hex-code class="hex-code"">#64A70B</span>
@@ -37,7 +40,10 @@
           <div class="swatch-container pt-7241c">
 
             <div class="front grey">
-                <div class="hover-notification">Copy to Clipboard</div>
+              <div class="button-wrap">
+
+                <button class="hover-notification">Copy to Clipboard</button>
+              </div>
               <footer class="details">
                 <p>Talix Grey
                   <span class="hex-code">#54585A</span>
@@ -50,7 +56,10 @@
           <div class="swatch-container pt-7241c">
 
             <div class="front white">
-                <div class="hover-notification">Copy to Clipboard</div>
+            <div class="button-wrap">
+
+                <button class="hover-notification">Copy to Clipboard</button>
+              </div>
               <footer class="details">
                 <p>Talix White
                   <span class="hex-code">#FFF</span>
@@ -61,7 +70,9 @@
           <div class="swatch-container pt-7241c">
 
             <div class="front blue">
-              <div class="hover-notification">Copy to Clipboard</div>
+              <div class="button-wrap">
+              <button class="hover-notification">Copy to Clipboard</button>
+              </div>
               <footer class="details">
                 <p>Talix Blue
                   <span class="hex-code">#003D4C</span>
@@ -73,7 +84,10 @@
           <div class="swatch-container pt-7241c">
 
             <div class="front purple">
-              <div class="hover-notification">Copy to Clipboard</div>
+            <div class="button-wrap">
+
+              <button class="hover-notification">Copy to Clipboard</button>
+            </div>
               <footer class="details">
                 <p>Talix Purple
                   <span class="hex-code" id="copyBitch">#5F259F</span>
