making some progress

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Talix - Styleguide</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="content-type" content="text/ html;charset=utf-8" />
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="css/talix.css">
   <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -20,7 +20,7 @@
 
       <!-- end typography -->
       <div class="color-palette col-md-12">
-        <p class="sg-label">Color Palette</p>
+        <h2 class="sg-section-header">Colors</h2>
         <section class="colors">
           <div class="swatch-container pt-7241c">
 
@@ -31,11 +31,12 @@
               </div>
               <footer class="details">
                 <p>Talix Green
-                  <span class="hex-code class="hex-code"">#64A70B</span>
+                  <span class="hex-code class=" hex-code "">#64A70B</span>
                 </p>
               </footer>
             </div>
-          </div> <!-- end green swatch -->
+          </div>
+          <!-- end green swatch -->
 
           <div class="swatch-container pt-7241c">
 
@@ -56,7 +57,7 @@
           <div class="swatch-container pt-7241c">
 
             <div class="front white">
-            <div class="button-wrap">
+              <div class="button-wrap">
 
                 <button class="hover-notification">Copy to Clipboard</button>
               </div>
@@ -71,7 +72,7 @@
 
             <div class="front blue">
               <div class="button-wrap">
-              <button class="hover-notification">Copy to Clipboard</button>
+                <button class="hover-notification">Copy to Clipboard</button>
               </div>
               <footer class="details">
                 <p>Talix Blue
@@ -84,10 +85,10 @@
           <div class="swatch-container pt-7241c">
 
             <div class="front purple">
-            <div class="button-wrap">
+              <div class="button-wrap">
 
-              <button class="hover-notification">Copy to Clipboard</button>
-            </div>
+                <button class="hover-notification">Copy to Clipboard</button>
+              </div>
               <footer class="details">
                 <p>Talix Purple
                   <span class="hex-code" id="copyBitch">#5F259F</span>
@@ -106,14 +107,31 @@
 
   </div>
 
-<div class="col-md-6 typography" style="padding-top: 4em;">
-  <p>
-    <span class="sg-label">Paragraphs: </span>ICD-9 to ICD-9 is Driving Everyone Crazy!
-  </p>
-</div>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
-<script src="library/js/styleguide.js"></script>
+<div class="container">
+  <h2 class="sg-section-header">Typography</h2>
+</div>
+
+  <div class="container typography">
+
+      <div class="row col-md-7">
+        <p class="font light">Source Sans Pro Light</p>
+        <p class="weight-spacing">Weight: 300, Letter Spacing: 0.07rem</p>
+        <p class="font regular">Source Sans Pro Regular</p>
+        <p class="weight-spacing">Weight: 400, Letter Spacing: 0.04rem</p>
+
+        <p class="font semi-bold">Source Sans Pro Semi-bold</p>
+        <p class="weight-spacing">Weight: 600, Letter Spacing: 0.04rem</p>
+        <p class="font bold">Source Sans Pro Bold</p>
+        <p class="weight-spacing">Weight: 700, Letter Spacing: 0.04rem</p>
+      </div>
+
+  </div>
+
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+
+  <script src="library/js/styleguide.js"></script>
 </body>
 
 </html>
