adding ui elements

--- a/index.html
+++ b/index.html
@@ -108,13 +108,13 @@
   </div>
 
 
-<div class="container">
+<div class="container type">
   <h2 class="sg-section-header">Typography</h2>
 </div>
 
   <div class="container typography">
 
-      <div class="row col-md-7">
+      <div class="font-weight-wrapper">
         <p class="font light">Source Sans Pro Light</p>
         <p class="weight-spacing">Weight: 300, Letter Spacing: 0.07rem</p>
         <p class="font regular">Source Sans Pro Regular</p>
@@ -123,11 +123,41 @@
         <p class="font semi-bold">Source Sans Pro Semi-bold</p>
         <p class="weight-spacing">Weight: 600, Letter Spacing: 0.04rem</p>
         <p class="font bold">Source Sans Pro Bold</p>
-        <p class="weight-spacing">Weight: 700, Letter Spacing: 0.04rem</p>
+        <p class="weight-spacing" style="padding-bottom: 1.5rem;">Weight: 700, Letter Spacing: 0.04rem</p>
+  </div>
+  </div>
+
+  <div class="container ui-elements">
+  <h2 class="sg-section-header">UI Elements</h2>
+    <div class="row ui-things">
+      <div class="button-examples panel-examples">
+        <h3>Buttons</h3>
+        <button class="btn">Small Button</button>
+        <a href="" class="btn">Small Button</a>
       </div>
+
+      <div class="checkbox-examples panel-examples">
+        <section class="checkbox-section">
+        <h3>Checkbox Examples</h3>
+        <input type="checkbox" id="tl-checkbox">
+        <label for="tl-checkbox" class="tl-label"></label>
+        </section>
+      </div>
+      
+    </div>
 
   </div>
 
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
