--- a/index.html
+++ b/index.html
@@ -143,9 +143,18 @@
         <label for="tl-checkbox" class="tl-label"></label>
         </section>
       </div>
-      
-    </div>
 
+    </div>
+  </div>
+
+  <div class="container glyphs">
+          <h2 class="sg-section-header">Glyphicons</h2>
+
+    <div class="row">
+      <span class="glyphicon glyphicon-trash"></span>
+      <span class="glyphicon glyphicon-pencil"></span>
+      <span class="glyphicon glyphicon-search"></span>
+    </div>
   </div>
 
 <br>
